# cryptography

./: .gitignore  pyproject.toml
AES/: __init__.py  excer.py  operations.py  utils.py
Affine/: README (How to run).md  __init__.py  __main__.py  breaker.py  functions.py  pre_needed.py
SSSS/: README.md  ssss_code.py
Tests/AES/: test_operations.py
affine_break/: __init__.py  __main__.py  breaker.py  functions.py  pre_needed.py  report.tex
answers/first/: report.tex
answers/second/: answer.tex
answers/third/: HW4_4003613023_MahdiHaghverdi.tex
