[tool.poetry]
name = "cryptography"
version = "0.1.0"
description = ""
authors = ["mahdihaghverdi <mahdihaghverdiliewpl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
galois = "^0.3.8"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
rich = "^13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
